# gale_shapley_dating

./: .gitignore  README.md  app.py  dataloader.py  extract_embeddings.py  hello.py  match_testing.py  matrix_test.py  model.py  more_matrix.py  preferences.db  preferences.json  pyproject.toml  requirements.txt  run.py  schema.sql  train_model.py
model/: model.py  resnet18_tinygrad.py
utils/: database.py  image_ops.py  selection.py
